--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "pinia": "^2.1.7",
+    "swiper": "^11.0.7",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
